Fix Authelia home splash to reference correct link for webmail

--- a/internal/suites/example/compose/nginx/backend/html/home/index.html
+++ b/internal/suites/example/compose/nginx/backend/html/home/index.html
@@ -68,7 +68,7 @@
   <br /> Once first factor is passed, you will need to follow the links to register a secret for the second
   factor.<br /> Authelia
   will send you a fictitious email in a <strong>fake webmail</strong> at <a
-    href="http://localhost:8085">http://localhost:8085</a>.<br />
+    href="https://mail.example.com:8080/">https://mail.example.com:8080/</a>.<br />
   It will provide you with the link to complete the registration allowing you to authenticate with 2-factor.
 
   <ul>
